force-app/main/default/objects/Account_Tech_Tool__c/Account_Tech_Tool__c.object-meta.xml
<CustomObject>
    <label>Account Tech Tool</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Account Tool Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Tech Tools</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>