force-app/main/default/objects/Account_Tech_Tool__c/fields/Atlan_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Atlan_Integration_Status__c</fullName>
    <description>The status of the tool as an integration/source in Atlan</description>
    <inlineHelpText>The status of the tool as an integration/source in Atlan</inlineHelpText>
    <label>Atlan Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Launch Goal</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Integrated</fullName>
            </value>
            <value>
                <fullName>Not Planned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>