force-app/main/default/objects/Account_Tech_Tool__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Any general notes related to this tool and account</description>
    <inlineHelpText>Any general notes related to this tool and account</inlineHelpText>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>