force-app/main/default/objects/Account_Tech_Tool__c/fields/Tech_Tool__c.field-meta.xml
<CustomField>
    <fullName>Tech_Tool__c</fullName>
    <label>Tech Tool</label>
    <referenceTo>Tech_Tool__c</referenceTo>
    <relationshipName>Account_Tech_Tools</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>