force-app/main/default/objects/Account_Tech_Tool__c/fields/Tech_Tool_Type__c.field-meta.xml
<CustomField>
    <fullName>Tech_Tool_Type__c</fullName>
    <description>The type of tool (e.g. Data Warehouse, BI Tool, etc.). Formula from Tech Tool</description>
    <formula>TEXT(Tech_Tool__r.Type__c)</formula>
    <inlineHelpText>The type of tool (e.g. Data Warehouse, BI Tool, etc.). Formula from Tech Tool</inlineHelpText>
    <label>Tech Tool Type</label>
    <type>Text</type>
</CustomField>