force-app/main/default/objects/Account_Tech_Tool__c/fields/Tool_Priority__c.field-meta.xml
<CustomField>
    <fullName>Tool_Priority__c</fullName>
    <description>Where does this tool rank in terms of the prevalence/focus within the organization (i.e. Primary, Secondary, Other)</description>
    <inlineHelpText>Where does this tool rank in terms of the prevalence/focus within the organization (i.e. Primary, Secondary, Other)</inlineHelpText>
    <label>Tool Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Deprecated</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>